@@ -44,12 +44,9 @@ public class ItemController {
 
   // 상품 수정
   @PutMapping(value="/admin/item/{itemId}/update")
-  public ResponseEntity<?> updateItem(@PathVariable("itemId") Long itemId, @RequestPart("itemFormDto") ItemFormDto itemFormDto, @RequestPart(value = "itemImgFile", required = false) List<MultipartFile> itemImgFileList) {
+  public ResponseEntity<?> updateItem(@PathVariable("itemId") Long itemId, @RequestPart("itemFormDto") ItemFormDto itemFormDto, @RequestPart("itemImgFile") List<MultipartFile> itemImgFileList) {
     try {
-      MultipartFile imageFile = (itemImgFileList != null && !itemImgFileList.isEmpty())
-          ? itemImgFileList.get(0)
-          : null;
-      itemService.updateItem(itemId,itemFormDto,imageFile);
+      itemService.updateItem(itemId,itemFormDto,itemImgFileList.getFirst());
       return ResponseEntity.ok(itemId);
     } catch(Exception e){
       return ResponseEntity.internalServerError().body(Map.of("error", e.getMessage()));
